--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.469.0",
-    "next": "15.0.1",
+    "next": "^15.1.4",
     "radix-ui": "^1.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
